--- a/index.html
+++ b/index.html
@@ -507,6 +507,16 @@ async function loadFromDB(id){
 const ADMIN_PASSWORD = "dkgus12";
 // ✅ SIM(공유) 비밀번호
 const SIM_PASSWORD = "pramochi#8535";
+  // ✅ 직업별 템플릿(= shares 테이블에 저장된 id) 매핑
+const JOB_TEMPLATE_ID = {
+  "집행관": "gv4xgwwbrw",
+  "향사수": "ylpsiqhtwu",
+  "태양감시자": "0244xlboy1",
+  "환영검사": "8es211i3ly",
+  "심연추방자": "t3l3k70wih",
+  "주문각인사": "umw93nhvnu",
+};
+
 
 const cv = document.getElementById("cv");
 const ctx = cv.getContext("2d");
@@ -921,7 +931,52 @@ function setViewerMode(on){
   // ✅ 레이아웃 바뀌면 캔버스 실제 픽셀 크기부터 다시 맞춰야 클릭 좌표가 안 틀어짐
   resize();   // (resize 안에서 draw() 호출함)
 }
+async function loadJobTemplate(jobName){
+  const tid = JOB_TEMPLATE_ID[jobName];
+  if(!tid){
+    alert("❌ 이 직업 템플릿이 등록되지 않았어.");
+    return;
+  }
 
+  try{
+    els.shareInfo.textContent = "불러오는 중...";
+    const payload = await loadFromDB(tid);
+    applyPack(payload);
+
+    // 공유 모드면 SIM 유지
+    if(state.viewerMode) state.mode = "SIM";
+
+    resize();
+    draw();
+    els.shareInfo.textContent = `✅ ${jobName} 템플릿 로드 완료`;
+  }catch(e){
+    console.error(e);
+    els.shareInfo.textContent = "❌ 템플릿 로드 실패";
+    alert("❌ 템플릿을 불러오지 못했어. id가 맞는지/DB 접근 가능한지 확인해줘.");
+  }
+}
+
+// ✅ 상단 드롭다운 이벤트 연결 (공유/편집 진입 상관없이 항상 등록되게 init 밖에 둠)
+const jobQuickSelect = document.getElementById("jobQuickSelect");
+if(jobQuickSelect){
+  jobQuickSelect.addEventListener("change", async ()=>{
+    const job = jobQuickSelect.value;
+    if(!job) return;
+
+    // 현재 포인트 찍어둔 상태면 덮어쓰기 경고
+    if(typeof getUsed === "function" && getUsed() > 0){
+      const ok = confirm("현재 찍은 포인트가 있습니다.\n템플릿을 불러오면 현재 상태가 덮어씌워집니다.\n계속할까요?");
+      if(!ok){
+        jobQuickSelect.value = "";
+        return;
+      }
+    }
+
+    await loadJobTemplate(job);
+  });
+}
+
+  
 function loadBgFromUrl(url, alsoSetInput=true){
   if(!url) return;
 
@@ -2000,31 +2055,36 @@ els.loadJson.addEventListener("click", ()=>{
   const shareId = params.get("id");
 
   if(shareId){
-    loadFromDB(shareId)
-      .then(payload=>{
-        applyPack(payload);
-        setViewerMode(true);
+  loadFromDB(shareId)
+    .then(payload=>{
+      applyPack(payload);
+      setViewerMode(true);
 
-        // 공유 SIM은 기본 잠금
-        // ✅ 세션에 잠금해제 기록 있으면 잠그지 않음
-const remembered = sessionStorage.getItem("SIM_UNLOCKED") === "1";
-state.simUnlockedOnce = state.simUnlockedOnce || remembered;
+      // ✅ 세션에 잠금해제 기록 있으면 잠그지 않음
+      const remembered = sessionStorage.getItem("SIM_UNLOCKED") === "1";
+      state.simUnlockedOnce = state.simUnlockedOnce || remembered;
 
-// 공유 SIM은 기본 잠금
-if(!state.simUnlockedOnce) setSimLocked(true);
-else setSimLocked(false);
+      // 공유 SIM은 기본 잠금
+      if(!state.simUnlockedOnce){
+        setSimLocked(true);
 
+        // ✅ [추가] ?id= 로 들어와도 자동 팝업
+        askSimPassword();
+      }else{
+        setSimLocked(false);
+      }
 
-        resize();
-        draw();
-      })
-      .catch(err=>{
-        console.error(err);
-        alert("❌ 유효하지 않은 공유 링크입니다.");
-      });
+      resize();
+      draw();
+    })
+    .catch(err=>{
+      console.error(err);
+      alert("❌ 유효하지 않은 공유 링크입니다.");
+    });
 
-    return; // 여기서 종료 (hash 로직 안탐)
-  }
+  return; // 여기서 종료 (hash 로직 안탐)
+}
+
 
   // 해시 있으면 로드
   const has = loadFromHash();
@@ -2056,122 +2116,14 @@ else setSimLocked(false);
 
   // 공유자면 처음 한번 비번 요청(자동 팝업 원하면 아래 주석 해제)
   if(state.viewerMode){ askSimPassword(); }
-// ✅ 직업별 템플릿 share id 매핑 (네가 만든 템플릿 id로 교체)
-const JOB_TEMPLATE_ID = {
-  "심연추방자": "여기에_id",
-  "태양감시자": "여기에_id",
-  "향사수": "여기에_id",
-  "환영검사": "여기에_id",
-  "집행관": "여기에_id",
-  "주문각인사": "여기에_id",
-};
 
-async function loadJobTemplate(jobName){
-  const tid = JOB_TEMPLATE_ID[jobName];
-  if(!tid){
-    alert("❌ 이 직업 템플릿 id가 아직 등록되지 않았어.");
-    return;
-  }
 
-  try{
-    els.shareInfo.textContent = "불러오는 중...";
-    const payload = await loadFromDB(tid);
-    applyPack(payload);
-
-    // 공유 모드로 들어온 상태라면 유지
-    if(state.viewerMode) {
-      state.mode = "SIM";
-      // 잠금상태는 그대로 유지(원하면 여기서 잠그거나 풀 수도 있음)
-    }
-
-    resize();
-    draw();
-    els.shareInfo.textContent = `✅ ${jobName} 템플릿 로드 완료`;
-  }catch(e){
-    console.error(e);
-    els.shareInfo.textContent = "❌ 템플릿 로드 실패";
-    alert("❌ 템플릿을 불러오지 못했어. id가 맞는지 확인해줘.");
-  }
-}
-// ✅ 직업별 템플릿 share id (네가 준 링크 그대로)
-const JOB_TEMPLATE_ID = {
-  "집행관": "gv4xgwwbrw",
-  "향사수": "ylpsiqhtwu",
-  "태양감시자": "0244xlboy1",
-  "환영검사": "8es211i3ly",
-  "심연추방자": "t3l3k70wih",
-  "주문각인사": "umw93nhvnu",
-};
-
-async function loadJobTemplate(jobName){
-  const tid = JOB_TEMPLATE_ID[jobName];
-  if(!tid){
-    alert("❌ 이 직업 템플릿이 등록되지 않았어.");
-    return;
-  }
-
-  try{
-    els.shareInfo.textContent = "불러오는 중...";
-    const payload = await loadFromDB(tid);
-    applyPack(payload);
-
-    // 공유 모드면 SIM 유지
-    if(state.viewerMode) state.mode = "SIM";
-
-    resize();
-    draw();
-    els.shareInfo.textContent = `✅ ${jobName} 템플릿 로드 완료`;
-  }catch(e){
-    console.error(e);
-    els.shareInfo.textContent = "❌ 템플릿 로드 실패";
-    alert("❌ 템플릿을 불러오지 못했어. id가 맞는지/DB 접근 가능한지 확인해줘.");
-  }
-}
-
-// ✅ 상단 드롭다운 이벤트 연결
-const jobQuickSelect = document.getElementById("jobQuickSelect");
-if(jobQuickSelect){
-  jobQuickSelect.addEventListener("change", async ()=>{
-    const job = jobQuickSelect.value;
-    if(!job) return;
-
-    // 현재 포인트 찍어둔 상태면 덮어쓰기 경고
-    if(typeof getUsed === "function" && getUsed() > 0){
-      const ok = confirm("현재 찍은 포인트가 있습니다.\n템플릿을 불러오면 현재 상태가 덮어씌워집니다.\n계속할까요?");
-      if(!ok){
-        jobQuickSelect.value = "";
-        return;
-      }
-    }
-
-    await loadJobTemplate(job);
-  });
-}
-
-// ✅ 상단 드롭다운 이벤트
-const jobQuickSelect = document.getElementById("jobQuickSelect");
-if(jobQuickSelect){
-  jobQuickSelect.addEventListener("change", async ()=>{
-    const job = jobQuickSelect.value;
-    if(!job) return;
-
-    // (선택) 포인트 찍힌 상태를 지울지 물어보기
-    if(getUsed() > 0){
-      const ok = confirm("현재 찍은 포인트가 있습니다.\n템플릿을 불러오면 현재 상태가 덮어씌워집니다.\n계속할까요?");
-      if(!ok){
-        jobQuickSelect.value = "";
-        return;
-      }
-    }
-
-    await loadJobTemplate(job);
-  });
-}
 
 })();
 </script>
 </body>
 </html>
+
 
 
 
